<resources>
    <string name="app_name">beforespr</string>
    <string name="rejestroj_konto">Rejestroj konto</string>
    <string name="podaj_e_mail">Podaj e-mail:</string>
    <string name="email">email</string>
    <string name="podaj_haslo">Podaj haslo:</string>
    <string name="powtorz_haslo">Powtorz haslo:</string>
    <string name="zatwierdz">Zatwierdz</string>
    <string name="autor_mariusz_rychlik">Autor Mariusz Rychlik</string>
    <string name="witamy_w_aplikacji">Witamy w aplikacji</string>
    <string name="zalogowano_jako">Zalogowano jako</string>
    <string name="wyloguj">Wyloguj</string>
</resources>